[package]
name = "girasol"
version = "0.1.0"
authors = ["SchrodingerZhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["default","attributes", "unstable"] }
snmalloc-rs = "0.2"
structopt = "0.3.14"
anyhow = "1.0"
async-trait = "0.1.30"
xactor = "0.6.4"
pretty_env_logger = "0.4.0"
log = "0.4.8"
simd-json = "0.3.9"
futures = "0.3.5"
futures-io = { version = "0.3.5", features = ["std", "unstable"] }
futures-util = "0.3.5"
ws_stream_tungstenite = "0.1.0"
async-tungstenite = { git = "https://github.com/sdroege/async-tungstenite" , features = ["async-std-runtime", "async-tls"]}
async_io_stream = "0.1.0"
async-tls = "0.7"
typename = "0.1.2"
serde = {version = "1" , features = ["derive"]}
sled = { version = "0.31", features = ["io_uring", "testing"] }
systemstat = "0.1.5"

[patch."crates-io"]
async-tungstenite = { git = "https://github.com/sdroege/async-tungstenite" }